fixed gap in rain sound

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ video {
     cursor: pointer;
     border-radius: 5px;
     font-size: 20px;
-    transition: all 0.5s ease;
+    transition: all 0.4s ease;
 }
 
 .time-select button:hover {
